[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
clap = { version = "4.4.10", features = ["derive", "usage", "help"] }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
priority-queue = "1.3.2"

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["logging", "metrics"]
logging = ["tracing", "tracing-subscriber"]
metrics = []
